Fixed issues with site table overflowing layout in firefox. "overflow-y:scroll" was required

--- a/client/src/components/mainbox/MainBox.css
+++ b/client/src/components/mainbox/MainBox.css
@@ -1,4 +1,5 @@
 .mainbox {
+  overflow-y: scroll;
   display               : grid;
   text-align            : center;
   flex-basis            : 95%;
